# aGen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  aGen.hpp  js.bv  main.cpp  script.cs
examples/: example0_simple.cpp  example1_fib.cpp
inc/: agen.h
inc/agen/: BitConverter.h  ByteCode.h  FunctionData.h  FunctionManager.h  Generator.h  OpCode.h  Type.h
src/: BitConverter.cpp  FunctionManager.cpp  Generator.cpp
